Add endpoints to list, get and create farmers
