# src/main/kotlin/com/a4a/g8api/models/Farmer.kt
@@ -1,0 +1,8 @@
+package com.a4a.g8api.models
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class Farmer(val id: String, val firstName: String, val lastName: String, val email: String, val password: String)
+
+val farmerStorage = mutableListOf<Farmer>()
